--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {},
   "scripts": {
